fixed navbar, now collapsing after click

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -240,6 +240,7 @@ header .intro-text {
 }
 /* Features Section */
 #features {
+
 	padding: 100px 0;
 	background: #f6f6f6;
 }
@@ -527,16 +528,16 @@ label {
 	box-shadow: transparent;
 }
 .form-control::-webkit-input-placeholder {
-color: #777;
+	color: #777;
 }
 .form-control:-moz-placeholder {
-color: #777;
+	color: #777;
 }
 .form-control::-moz-placeholder {
-color: #777;
+	color: #777;
 }
 .form-control:-ms-input-placeholder {
-color: #777;
+	color: #777;
 }
 #contact .contact-item {
 	margin: 20px 0;
@@ -609,8 +610,70 @@ color: #777;
 	font-weight: 400;
 }
 
-@media (max-width: 768px) {
-#about img {
-	margin: 50px 0;
+@media (max-width: 1200px) {
+	.navbar-header {
+		float: none;
+	}
+	.navbar-left,.navbar-right {
+		float: none !important;
+	}
+	.navbar-toggle {
+		display: block;
+	}
+	.navbar-collapse {
+		border-top: 1px solid transparent;
+		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+	}
+	.navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+	.navbar-collapse.collapse {
+		display: none!important;
+	}
+	.navbar-nav {
+		float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+		float: none;
+	}
+	.navbar-nav>li>a {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.collapse.in{
+		display:block !important;
+	}
 }
-}
+
+/*@media (max-width: 1300px){*/
+/*	.navbar-expand-custom {*/
+/*		flex-direction: row;*/
+/*		flex-wrap: nowrap;*/
+/*		justify-content: flex-start;*/
+/*	}*/
+/*	.navbar-expand-custom .navbar-nav {*/
+/*		flex-direction: row;*/
+/*	}*/
+/*	.navbar-expand-custom .navbar-nav .nav-link {*/
+/*		padding-right: .5rem;*/
+/*		padding-left: .5rem;*/
+/*	}*/
+/*	.navbar-expand-custom .navbar-collapse {*/
+/*		display: flex!important;*/
+/*	}*/
+/*	.navbar-expand-custom .navbar-toggler {*/
+/*		display: none;*/
+/*	}*/
+/*}*/
+/*!*@media (max-width: 768px) {*!*/
+/*!*#about img {*!*/
+/*!*	margin: 50px 0;*!*/
+/*!*}*!*/
+/*}*/
+
+
+
+
+
